--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ h6 {
   .music-list-container {
     font-size: 16px;
     width: 250px;
-    max-height: 550px;
+    height: 550px;
   }
   .row {
     width: 100%;
@@ -360,7 +360,7 @@ h6 {
   }
   .music-list-container.active {
     width: 300px;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     z-index: 1;
     top: 0;
